build_web_verify_2.txt
warning: unused import: `anyhow::Result`
 --> crates\core\src\state.rs:2:5
  |
2 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `deve_core` (lib) generated 1 warning (run `cargo fix --lib -p deve_core` to apply 1 suggestion)
   Compiling deve_web v0.0.1 (E:\gitclone\Deve-Note\apps\web)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `web_sys`
 --> apps\web\src\editor.rs:6:34
  |
6 |     fn setupCodeMirror(element: &web_sys::HtmlElement);
  |                                  ^^^^^^^ use of unresolved module or unlinked crate `web_sys`
  |
  = help: if you wanted to use a crate named `web_sys`, use `cargo add web_sys` to add it to your `Cargo.toml`
help: consider importing this crate
  |
1 + use leptos::web_sys;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `web_sys`
  --> apps\web\src\editor.rs:17:31
   |
17 |             let raw_element: &web_sys::HtmlElement = &element;
   |                               ^^^^^^^ use of unresolved module or unlinked crate `web_sys`
   |
   = help: if you wanted to use a crate named `web_sys`, use `cargo add web_sys` to add it to your `Cargo.toml`
help: consider importing this crate
   |
 1 + use leptos::web_sys;
   |

warning: unused import: `leptos::prelude::*`
  --> apps\web\src\editor.rs:16:17
   |
16 |             use leptos::prelude::*;// ensure traits are in scope
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0433`.
warning: `deve_web` (bin "deve_web") generated 1 warning
error: could not compile `deve_web` (bin "deve_web") due to 2 previous errors; 1 warning emitted
